@@ -656,6 +656,27 @@ name|op
 operator|.
 name|equals
 argument_list|(
+literal|"GETFILESTATUS"
+argument_list|)
+condition|)
+block|{
+name|content
+operator|=
+name|loader
+operator|.
+name|getFileStatus
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|op
+operator|.
+name|equals
+argument_list|(
 literal|"LISTSTATUS"
 argument_list|)
 condition|)
