@@ -1932,121 +1932,11 @@ argument_list|(
 literal|"/dir0/file0"
 argument_list|)
 decl_stmt|;
-name|assertEquals
+name|compareFile
 argument_list|(
 name|expected
-operator|.
-name|getAccessTime
-argument_list|()
 argument_list|,
 name|status
-operator|.
-name|getAccessTime
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getBlockSize
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getBlockSize
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getGroup
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getGroup
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getLen
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getLen
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getModificationTime
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getModificationTime
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getOwner
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getOwner
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getPermission
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getPermission
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|getReplication
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|getReplication
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|expected
-operator|.
-name|isDirectory
-argument_list|()
-argument_list|,
-name|status
-operator|.
-name|isDirectory
-argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// LISTSTATUS operation to a invalid path
@@ -2063,39 +1953,13 @@ operator|+
 literal|"/webhdfs/v1/invalid/?op=LISTSTATUS"
 argument_list|)
 decl_stmt|;
-name|HttpURLConnection
-name|connection
-init|=
-operator|(
-name|HttpURLConnection
-operator|)
-name|url
-operator|.
-name|openConnection
-argument_list|()
-decl_stmt|;
-name|connection
-operator|.
-name|setRequestMethod
-argument_list|(
-literal|"GET"
-argument_list|)
-expr_stmt|;
-name|connection
-operator|.
-name|connect
-argument_list|()
-expr_stmt|;
-name|assertEquals
+name|verifyHttpResponseCode
 argument_list|(
 name|HttpURLConnection
 operator|.
 name|HTTP_NOT_FOUND
 argument_list|,
-name|connection
-operator|.
-name|getResponseCode
-argument_list|()
+name|url
 argument_list|)
 expr_stmt|;
 comment|// LISTSTATUS operation to a invalid prefix
@@ -2111,38 +1975,56 @@ operator|+
 literal|"/webhdfs/v1?op=LISTSTATUS"
 argument_list|)
 expr_stmt|;
-name|connection
-operator|=
-operator|(
-name|HttpURLConnection
-operator|)
-name|url
-operator|.
-name|openConnection
-argument_list|()
-expr_stmt|;
-name|connection
-operator|.
-name|setRequestMethod
-argument_list|(
-literal|"GET"
-argument_list|)
-expr_stmt|;
-name|connection
-operator|.
-name|connect
-argument_list|()
-expr_stmt|;
-name|assertEquals
+name|verifyHttpResponseCode
 argument_list|(
 name|HttpURLConnection
 operator|.
 name|HTTP_NOT_FOUND
 argument_list|,
-name|connection
+name|url
+argument_list|)
+expr_stmt|;
+comment|// GETFILESTATUS operation
+name|status
+operator|=
+name|webhdfs
 operator|.
-name|getResponseCode
-argument_list|()
+name|getFileStatus
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/dir0/file0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|compareFile
+argument_list|(
+name|expected
+argument_list|,
+name|status
+argument_list|)
+expr_stmt|;
+comment|// GETFILESTATUS operation to a invalid path
+name|url
+operator|=
+operator|new
+name|URL
+argument_list|(
+literal|"http://localhost:"
+operator|+
+name|port
+operator|+
+literal|"/webhdfs/v1/invalid/?op=GETFILESTATUS"
+argument_list|)
+expr_stmt|;
+name|verifyHttpResponseCode
+argument_list|(
+name|HttpURLConnection
+operator|.
+name|HTTP_NOT_FOUND
+argument_list|,
+name|url
 argument_list|)
 expr_stmt|;
 comment|// invalid operation
@@ -2158,38 +2040,13 @@ operator|+
 literal|"/webhdfs/v1/?op=INVALID"
 argument_list|)
 expr_stmt|;
-name|connection
-operator|=
-operator|(
-name|HttpURLConnection
-operator|)
-name|url
-operator|.
-name|openConnection
-argument_list|()
-expr_stmt|;
-name|connection
-operator|.
-name|setRequestMethod
-argument_list|(
-literal|"GET"
-argument_list|)
-expr_stmt|;
-name|connection
-operator|.
-name|connect
-argument_list|()
-expr_stmt|;
-name|assertEquals
+name|verifyHttpResponseCode
 argument_list|(
 name|HttpURLConnection
 operator|.
 name|HTTP_BAD_REQUEST
 argument_list|,
-name|connection
-operator|.
-name|getResponseCode
-argument_list|()
+name|url
 argument_list|)
 expr_stmt|;
 comment|// invalid method
@@ -2205,8 +2062,9 @@ operator|+
 literal|"/webhdfs/v1/?op=LISTSTATUS"
 argument_list|)
 expr_stmt|;
+name|HttpURLConnection
 name|connection
-operator|=
+init|=
 operator|(
 name|HttpURLConnection
 operator|)
@@ -2214,7 +2072,7 @@ name|url
 operator|.
 name|openConnection
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 name|connection
 operator|.
 name|setRequestMethod
@@ -2249,6 +2107,185 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|compareFile (FileStatus expected, FileStatus status)
+specifier|private
+specifier|static
+name|void
+name|compareFile
+parameter_list|(
+name|FileStatus
+name|expected
+parameter_list|,
+name|FileStatus
+name|status
+parameter_list|)
+block|{
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getAccessTime
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getAccessTime
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getBlockSize
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getBlockSize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getGroup
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getGroup
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getLen
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getLen
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getModificationTime
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getModificationTime
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getOwner
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getOwner
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getPermission
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getPermission
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|getReplication
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|getReplication
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+operator|.
+name|isDirectory
+argument_list|()
+argument_list|,
+name|status
+operator|.
+name|isDirectory
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|verifyHttpResponseCode (int expectedCode, URL url)
+specifier|private
+name|void
+name|verifyHttpResponseCode
+parameter_list|(
+name|int
+name|expectedCode
+parameter_list|,
+name|URL
+name|url
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HttpURLConnection
+name|connection
+init|=
+operator|(
+name|HttpURLConnection
+operator|)
+name|url
+operator|.
+name|openConnection
+argument_list|()
+decl_stmt|;
+name|connection
+operator|.
+name|setRequestMethod
+argument_list|(
+literal|"GET"
+argument_list|)
+expr_stmt|;
+name|connection
+operator|.
+name|connect
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expectedCode
+argument_list|,
+name|connection
+operator|.
+name|getResponseCode
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
